package com.daniilzyravlev.fishbone;

/**
 * Interface of DragListener
 */
public interface DragListener {
    /**
     * Interface for onDrag
     */
    void onDrag();
}
